--- a/web/app/themes/platformlondon/styles/platform-stack.css
+++ b/web/app/themes/platformlondon/styles/platform-stack.css
@@ -31,32 +31,50 @@
 
 .platform-stack .wp-block-post.type-pl_project:first-child {
     position: relative;
+    left: 50px;
     top: 0;
     transform: rotate(-30deg);
     @apply z-30;
 }
 
 .platform-stack .wp-block-post.type-pl_project:nth-child(2) {
-    left: 150px;
+    left: 200px;
     transform: rotate(20deg);
     @apply z-40;
 }
 
 .platform-stack .wp-block-post.type-pl_project:nth-child(3) {
-    left: 300px;
-    @apply z-50;
+    display: none;
 }
 
 .platform-stack .wp-block-post.type-pl_project:nth-child(4) {
-    left: 450px;
-    transform: rotate(5deg);
-    @apply z-40;
+    display: none;
 }
 
 .platform-stack .wp-block-post.type-pl_project:nth-child(5) {
-    left: 600px;
-    transform: rotate(-10deg);
-    @apply z-30;
+    display: none;
+}
+
+@screen md {
+    .platform-stack .wp-block-post.type-pl_project:nth-child(3) {
+        left: 350px;
+        display: block;
+        @apply z-50;
+    }
+
+    .platform-stack .wp-block-post.type-pl_project:nth-child(4) {
+        left: 500px;
+        display: block;
+        transform: rotate(5deg);
+        @apply z-40;
+    }
+
+    .platform-stack .wp-block-post.type-pl_project:nth-child(5) {
+        left: 650px;
+        display: block;
+        transform: rotate(-10deg);
+        @apply z-30;
+    }
 }
 
 @screen lg {
@@ -65,19 +83,19 @@
     }
 
     .platform-stack .wp-block-post.type-pl_project:first-child {
-        left: initial;
+        left: 50px;
     }
 
     .platform-stack .wp-block-post.type-pl_project:nth-child(2) {
-        left: calc(25% - 250px);
+        left: calc(25% - 200px);
     }
 
     .platform-stack .wp-block-post.type-pl_project:nth-child(3) {
-        left: calc(50% - 250px);
+        left: calc(50% - 200px);
     }
 
     .platform-stack .wp-block-post.type-pl_project:nth-child(4) {
-        left: calc(75% - 250px);
+        left: calc(75% - 200px);
     }
 
     .platform-stack .wp-block-post.type-pl_project:nth-child(5) {
